--- a/client/src/styles/defaults.less
+++ b/client/src/styles/defaults.less
@@ -97,6 +97,10 @@ label {
   h1 {
     font-size: 70px;
     margin: 0;
+
+    @media @xs-and-down {
+      font-size: 60px;
+    }
   }
 
   h2 {
@@ -104,6 +108,10 @@ label {
     font-size: 35px;
     padding: 0 2%;
     margin: 2% 0;
+
+    @media @xs-and-down{
+      font-size: 26px;
+    }
   }
 
 }
