--- a/client/src/styles/landing.less
+++ b/client/src/styles/landing.less
@@ -20,13 +20,18 @@
     padding: 20px 0;
     color: @text-icons-color;
 
+    @media (max-width: 600px) {
+      padding-top: 60px;
+    }
+
     h3 {
       font-size: 30px;
       text-align: left;
       margin: 5px;
 
       @media @xs-and-down {
-        font-size: 25px;
+        font-size: 22px;
+        margin-bottom: 25px;
       }
 
     }
